// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MCAssessment MCAssessment component 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-assessment is-not-correct is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  tabIndex={-1}
>
  <fieldset>
    <legend
      className="instructions"
    >
      <span
        className="for-screen-reader-only"
      >
        Multiple choice form with 0 choices. 
      </span>
      <span>
        Pick the correct answer
      </span>
    </legend>
    <div
      role="radiogroup"
    >
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          className="result-container"
        >
          <p
            className="result incorrect"
          >
            Incorrect - You received a undefined% on this question.
          </p>
        </div>
      </div>
    </div>
    <div>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
        >
          <button
            onClick={[Function]}
          >
            Read an explanation of the answer
          </button>
        </div>
        <div />
      </div>
    </div>
  </fieldset>
</form>
`;

exports[`MCAssessment MCAssessment component not shuffled 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-assessment is-not-correct is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  tabIndex={-1}
>
  <fieldset>
    <legend
      className="instructions"
    >
      <span
        className="for-screen-reader-only"
      >
        Multiple choice form with 0 choices. 
      </span>
      <span>
        Pick the correct answer
      </span>
    </legend>
    <div
      role="radiogroup"
    >
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          className="result-container"
        >
          <p
            className="result incorrect"
          >
            Incorrect - You received a undefined% on this question.
          </p>
        </div>
      </div>
    </div>
    <div>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
        >
          <button
            onClick={[Function]}
          >
            Read an explanation of the answer
          </button>
        </div>
        <div />
      </div>
    </div>
  </fieldset>
</form>
`;

exports[`MCAssessment MCAssessment component question with no solution page 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-assessment is-not-correct is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  tabIndex={-1}
>
  <fieldset>
    <legend
      className="instructions"
    >
      <span
        className="for-screen-reader-only"
      >
        Multiple choice form with 0 choices. 
      </span>
      <span>
        Pick the correct answer
      </span>
    </legend>
    <div
      role="radiogroup"
    >
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          className="result-container"
        >
          <p
            className="result incorrect"
          >
            Incorrect - You received a undefined% on this question.
          </p>
        </div>
      </div>
    </div>
    <div />
  </fieldset>
</form>
`;

exports[`MCAssessment MCAssessment component not shuffled 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-assessment is-not-correct is-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  tabIndex={-1}
>
  <fieldset>
    <legend
      className="instructions"
    >
      <span
        className="for-screen-reader-only"
      >
        Multiple choice form with 0 choices. 
      </span>
      <span>
        Pick the correct answer
      </span>
    </legend>
    <div
      role="radiogroup"
    >
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          className="result-container"
        >
          <p
            className="result incorrect"
          >
            Incorrect - You received a undefined% on this question.
          </p>
        </div>
      </div>
    </div>
    <div>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center"
        >
          <button
            onClick={[Function]}
          >
            Hide Explanation
          </button>
        </div>
        <div>
          <div
            aria-labelledby="obojobo-draft--chunks--mc-assessment--solution-label"
            className="solution-container"
            role="region"
            tabIndex="-1"
          >
            <span
              className="for-screen-reader-only"
              id="obojobo-draft--chunks--mc-assessment--solution-label"
            >
              Explanation of the answer:
            </span>
            <div
              className="component obojobo-draft--pages--page"
              data-focussed={false}
              data-id="page-id"
              data-obo-component={true}
              data-type="ObojoboDraft.Pages.Page"
              id="obo-page-id"
              tabIndex={-1}
            >
              <div
                className="component"
                data-focussed={false}
                data-id="text-id"
                data-obo-component={true}
                data-type="ObojoboDraft.Chunks.Text"
                id="obo-text-id"
                tabIndex={-1}
              >
                <div
                  className="text-chunk obojobo-draft--chunks--single-text pad"
                >
                  <span
                    className="text align-left"
                    data-group-index={0}
                    data-indent={0}
                  >
                    <span>
                      <span>
                        <span>
                          Example text
                        </span>
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</form>
`;

exports[`MCAssessment MCAssessment component review mode 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-review is-not-correct is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onChange={null}
  onSubmit={[Function]}
  tabIndex={-1}
>
  <fieldset>
    <legend
      className="instructions"
    >
      <span
        className="for-screen-reader-only"
      >
        Multiple choice form with 0 choices. 
      </span>
      <span>
        Pick the correct answer
      </span>
    </legend>
    <div
      role="radiogroup"
    >
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          className="result-container"
        >
          <p
            className="result incorrect"
          >
            Incorrect - You received a undefined% on this question.
          </p>
        </div>
      </div>
    </div>
    <div
      className="submit-and-result-container"
    >
      <div
        aria-hidden="true"
        className="result-container"
      >
        <p
          className="result incorrect"
        >
          Incorrect
        </p>
      </div>
    </div>
    <div>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
        >
          <button
            onClick={[Function]}
          >
            Read an explanation of the answer
          </button>
        </div>
        <div />
      </div>
    </div>
  </fieldset>
</form>
`;

exports[`MCAssessment MCAssessment component with correct response in review mode - multiple-correct 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one-multiple-correct is-mode-review is-correct is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onChange={null}
  onSubmit={[Function]}
  tabIndex={-1}
>
  <fieldset>
    <legend
      className="instructions"
    >
      <span
        className="for-screen-reader-only"
      >
        Multiple choice form with 0 choices. 
      </span>
      <span>
        Pick one of the correct answers
      </span>
    </legend>
    <div
      role="radiogroup"
    >
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          className="result-container"
        >
          <p
            className="result correct"
          >
            mockCorrectLabels - You received a 100% on this question.
          </p>
        </div>
      </div>
    </div>
    <div
      className="submit-and-result-container"
    >
      <div
        aria-hidden="true"
        className="result-container"
      >
        <p
          className="result correct"
        >
          mockCorrectLabels
        </p>
      </div>
    </div>
    <div>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
        >
          <button
            onClick={[Function]}
          >
            Read an explanation of the answer
          </button>
        </div>
        <div />
      </div>
    </div>
  </fieldset>
</form>
`;

exports[`MCAssessment MCAssessment component with correct response in review mode 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-review is-correct is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onChange={null}
  onSubmit={[Function]}
  tabIndex={-1}
>
  <fieldset>
    <legend
      className="instructions"
    >
      <span
        className="for-screen-reader-only"
      >
        Multiple choice form with 0 choices. 
      </span>
      <span>
        Pick the correct answer
      </span>
    </legend>
    <div
      role="radiogroup"
    >
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          className="result-container"
        >
          <p
            className="result correct"
          >
            mockCorrectLabels - You received a 100% on this question.
          </p>
        </div>
      </div>
    </div>
    <div
      className="submit-and-result-container"
    >
      <div
        aria-hidden="true"
        className="result-container"
      >
        <p
          className="result correct"
        >
          mockCorrectLabels
        </p>
      </div>
    </div>
    <div>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
        >
          <button
            onClick={[Function]}
          >
            Read an explanation of the answer
          </button>
        </div>
        <div />
      </div>
    </div>
  </fieldset>
</form>
`;

exports[`MCAssessment MCAssessment component with feedback in sortedIds 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-assessment is-not-correct is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  tabIndex={-1}
>
  <fieldset>
    <legend
      className="instructions"
    >
      <span
        className="for-screen-reader-only"
      >
        Multiple choice form with 2 choices. 
      </span>
      <span>
        Pick the correct answer
      </span>
    </legend>
    <div
      role="radiogroup"
    >
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          className="result-container"
        >
          <p
            className="result incorrect"
          >
            Incorrect - You received a undefined% on this question.
          </p>
        </div>
      </div>
      <label
        className="component obojobo-draft--chunks--mc-assessment--mc-choice is-not-selected is-not-correct is-type-unchosen-correctly is-mode-assessment"
        data-focussed={false}
        data-id="choice2"
        data-obo-component={true}
        data-type="ObojoboDraft.Chunks.MCAssessment.MCChoice"
        id="obo-choice2"
        tabIndex={-1}
      >
        <input
          aria-checked={false}
          checked={false}
          disabled={false}
          name="id"
          role="radio"
          type="radio"
          value="choice2"
        />
        <div
          className="children"
        >
          <div>
            <div
              className="component obojobo-draft--chunks--mc-assessment--mc-answer"
              data-focussed={false}
              data-id="choice2-answer"
              data-obo-component={true}
              data-type="ObojoboDraft.Chunks.MCAssessment.MCAnswer"
              id="obo-choice2-answer"
              tabIndex={-1}
            >
              <div
                className="component"
                data-focussed={false}
                data-id="choice1-answer-text"
                data-obo-component={true}
                data-type="ObojoboDraft.Chunks.Text"
                id="obo-choice1-answer-text"
                tabIndex={-1}
              >
                <div
                  className="text-chunk obojobo-draft--chunks--single-text pad"
                >
                  <span
                    className="text align-left"
                    data-group-index={0}
                    data-indent={0}
                  >
                    <span>
                      <span>
                        <span>
                          Example Text 3
                        </span>
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            className="feedback-container"
          />
        </div>
      </label>
      <label
        className="component obojobo-draft--chunks--mc-assessment--mc-choice is-not-selected is-correct is-type-could-have-chosen is-mode-assessment"
        data-focussed={false}
        data-id="choice1"
        data-obo-component={true}
        data-type="ObojoboDraft.Chunks.MCAssessment.MCChoice"
        id="obo-choice1"
        tabIndex={-1}
      >
        <input
          aria-checked={false}
          checked={false}
          disabled={false}
          name="id"
          role="radio"
          type="radio"
          value="choice1"
        />
        <div
          className="children"
        >
          <div>
            <div
              className="component obojobo-draft--chunks--mc-assessment--mc-answer"
              data-focussed={false}
              data-id="choice1-answer"
              data-obo-component={true}
              data-type="ObojoboDraft.Chunks.MCAssessment.MCAnswer"
              id="obo-choice1-answer"
              tabIndex={-1}
            >
              <div
                className="component"
                data-focussed={false}
                data-id="choice1-answer-text"
                data-obo-component={true}
                data-type="ObojoboDraft.Chunks.Text"
                id="obo-choice1-answer-text"
                tabIndex={-1}
              >
                <div
                  className="text-chunk obojobo-draft--chunks--single-text pad"
                >
                  <span
                    className="text align-left"
                    data-group-index={0}
                    data-indent={0}
                  >
                    <span>
                      <span>
                        <span>
                          Example Text
                        </span>
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            className="feedback-container"
          />
        </div>
      </label>
    </div>
    <div>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
        >
          <button
            onClick={[Function]}
          >
            Read an explanation of the answer
          </button>
        </div>
        <div />
      </div>
    </div>
  </fieldset>
</form>
`;

exports[`MCAssessment MCAssessment component with incorrect response in practice mode 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-practice is-not-correct is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  tabIndex={-1}
>
  <fieldset>
    <legend
      className="instructions"
    >
      <span
        className="for-screen-reader-only"
      >
        Multiple choice form with 0 choices. 
      </span>
      <span>
        Pick the correct answer
      </span>
    </legend>
    <div
      role="radiogroup"
    >
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          className="result-container"
        >
          <p
            className="result incorrect"
          >
            mockIncorrectLabels - You received a 0% on this question.
          </p>
        </div>
      </div>
    </div>
    <div
      className="submit-and-result-container"
    >
      <div
        className="submit"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center"
        >
          <button
            aria-label="Try Question Again"
            onClick={[Function]}
          >
            Try Again
          </button>
        </div>
      </div>
      <div
        aria-hidden="true"
        className="result-container"
      >
        <p
          className="result incorrect"
        >
          mockIncorrectLabels
        </p>
      </div>
    </div>
    <div>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
        >
          <button
            onClick={[Function]}
          >
            Read an explanation of the answer
          </button>
        </div>
        <div />
      </div>
    </div>
  </fieldset>
</form>
`;

exports[`MCAssessment MCAssessment component with incorrect response in review mode - pick-all 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-all is-mode-review is-not-correct is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onChange={null}
  onSubmit={[Function]}
  tabIndex={-1}
>
  <fieldset>
    <legend
      className="instructions"
    >
      <span
        className="for-screen-reader-only"
      >
        Multiple choice form with 0 choices. 
      </span>
      <span>
        Pick 
        <b>
          all
        </b>
         of the correct answers
      </span>
    </legend>
    <div
      role={null}
    >
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          className="result-container"
        >
          <p
            className="result incorrect"
          >
            mockIncorrectLabels - You received a 0% on this question.
          </p>
          <span
            className="pick-all-instructions"
          >
            You have either missed some correct answers or selected some incorrect answers.
          </span>
        </div>
      </div>
    </div>
    <div
      className="submit-and-result-container"
    >
      <div
        aria-hidden="true"
        className="result-container"
      >
        <p
          className="result incorrect"
        >
          mockIncorrectLabels
        </p>
        <span
          className="pick-all-instructions"
        >
          You have either missed some correct answers or selected some incorrect answers.
        </span>
      </div>
    </div>
    <div>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
        >
          <button
            onClick={[Function]}
          >
            Read an explanation of the answer
          </button>
        </div>
        <div />
      </div>
    </div>
  </fieldset>
</form>
`;

exports[`MCAssessment MCAssessment component with incorrect response in review mode 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-review is-not-correct is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onChange={null}
  onSubmit={[Function]}
  tabIndex={-1}
>
  <fieldset>
    <legend
      className="instructions"
    >
      <span
        className="for-screen-reader-only"
      >
        Multiple choice form with 0 choices. 
      </span>
      <span>
        Pick the correct answer
      </span>
    </legend>
    <div
      role="radiogroup"
    >
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          className="result-container"
        >
          <p
            className="result incorrect"
          >
            mockIncorrectLabels - You received a 0% on this question.
          </p>
        </div>
      </div>
    </div>
    <div
      className="submit-and-result-container"
    >
      <div
        aria-hidden="true"
        className="result-container"
      >
        <p
          className="result incorrect"
        >
          mockIncorrectLabels
        </p>
      </div>
    </div>
    <div>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
        >
          <button
            onClick={[Function]}
          >
            Read an explanation of the answer
          </button>
        </div>
        <div />
      </div>
    </div>
  </fieldset>
</form>
`;

exports[`MCAssessment MCAssessment component with inverse sortedIds 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-assessment is-not-correct is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  tabIndex={-1}
>
  <fieldset>
    <legend
      className="instructions"
    >
      <span
        className="for-screen-reader-only"
      >
        Multiple choice form with 2 choices. 
      </span>
      <span>
        Pick the correct answer
      </span>
    </legend>
    <div
      role="radiogroup"
    >
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          className="result-container"
        >
          <p
            className="result incorrect"
          >
            Incorrect - You received a undefined% on this question.
          </p>
        </div>
      </div>
      <label
        className="component obojobo-draft--chunks--mc-assessment--mc-choice is-not-selected is-not-correct is-type-unchosen-correctly is-mode-assessment"
        data-focussed={false}
        data-id="choice2"
        data-obo-component={true}
        data-type="ObojoboDraft.Chunks.MCAssessment.MCChoice"
        id="obo-choice2"
        tabIndex={-1}
      >
        <input
          aria-checked={false}
          checked={false}
          disabled={false}
          name="id"
          role="radio"
          type="radio"
          value="choice2"
        />
        <div
          className="children"
        >
          <div>
            <div
              className="component obojobo-draft--chunks--mc-assessment--mc-answer"
              data-focussed={false}
              data-id="choice2-answer"
              data-obo-component={true}
              data-type="ObojoboDraft.Chunks.MCAssessment.MCAnswer"
              id="obo-choice2-answer"
              tabIndex={-1}
            >
              <div
                className="component"
                data-focussed={false}
                data-id="choice1-answer-text"
                data-obo-component={true}
                data-type="ObojoboDraft.Chunks.Text"
                id="obo-choice1-answer-text"
                tabIndex={-1}
              >
                <div
                  className="text-chunk obojobo-draft--chunks--single-text pad"
                >
                  <span
                    className="text align-left"
                    data-group-index={0}
                    data-indent={0}
                  >
                    <span>
                      <span>
                        <span>
                          Example Text 3
                        </span>
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            className="feedback-container"
          />
        </div>
      </label>
      <label
        className="component obojobo-draft--chunks--mc-assessment--mc-choice is-not-selected is-correct is-type-could-have-chosen is-mode-assessment"
        data-focussed={false}
        data-id="choice1"
        data-obo-component={true}
        data-type="ObojoboDraft.Chunks.MCAssessment.MCChoice"
        id="obo-choice1"
        tabIndex={-1}
      >
        <input
          aria-checked={false}
          checked={false}
          disabled={false}
          name="id"
          role="radio"
          type="radio"
          value="choice1"
        />
        <div
          className="children"
        >
          <div>
            <div
              className="component obojobo-draft--chunks--mc-assessment--mc-answer"
              data-focussed={false}
              data-id="choice1-answer"
              data-obo-component={true}
              data-type="ObojoboDraft.Chunks.MCAssessment.MCAnswer"
              id="obo-choice1-answer"
              tabIndex={-1}
            >
              <div
                className="component"
                data-focussed={false}
                data-id="choice1-answer-text"
                data-obo-component={true}
                data-type="ObojoboDraft.Chunks.Text"
                id="obo-choice1-answer-text"
                tabIndex={-1}
              >
                <div
                  className="text-chunk obojobo-draft--chunks--single-text pad"
                >
                  <span
                    className="text align-left"
                    data-group-index={0}
                    data-indent={0}
                  >
                    <span>
                      <span>
                        <span>
                          Example Text
                        </span>
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            className="feedback-container"
          />
        </div>
      </label>
    </div>
    <div>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
        >
          <button
            onClick={[Function]}
          >
            Read an explanation of the answer
          </button>
        </div>
        <div />
      </div>
    </div>
  </fieldset>
</form>
`;

exports[`MCAssessment MCAssessment component with labels 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-assessment is-not-correct is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  tabIndex={-1}
>
  <fieldset>
    <legend
      className="instructions"
    >
      <span
        className="for-screen-reader-only"
      >
        Multiple choice form with 0 choices. 
      </span>
      <span>
        Pick the correct answer
      </span>
    </legend>
    <div
      role="radiogroup"
    >
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          className="result-container"
        >
          <p
            className="result incorrect"
          >
            mockIncorrectLabels - You received a undefined% on this question.
          </p>
        </div>
      </div>
    </div>
    <div>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
        >
          <button
            onClick={[Function]}
          >
            Read an explanation of the answer
          </button>
        </div>
        <div />
      </div>
    </div>
  </fieldset>
</form>
`;

exports[`MCAssessment MCAssessment component with multiple responses 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-assessment is-not-correct is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  tabIndex={-1}
>
  <fieldset>
    <legend
      className="instructions"
    >
      <span
        className="for-screen-reader-only"
      >
        Multiple choice form with 0 choices. 
      </span>
      <span>
        Pick the correct answer
      </span>
    </legend>
    <div
      role="radiogroup"
    >
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          className="result-container"
        >
          <p
            className="result incorrect"
          >
            Incorrect - You received a undefined% on this question.
          </p>
        </div>
      </div>
    </div>
    <div>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
        >
          <button
            onClick={[Function]}
          >
            Read an explanation of the answer
          </button>
        </div>
        <div />
      </div>
    </div>
  </fieldset>
</form>
`;

exports[`MCAssessment MCAssessment component with sortedIds 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-assessment is-not-correct is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  tabIndex={-1}
>
  <fieldset>
    <legend
      className="instructions"
    >
      <span
        className="for-screen-reader-only"
      >
        Multiple choice form with 0 choices. 
      </span>
      <span>
        Pick the correct answer
      </span>
    </legend>
    <div
      role="radiogroup"
    >
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          className="result-container"
        >
          <p
            className="result incorrect"
          >
            Incorrect - You received a undefined% on this question.
          </p>
        </div>
      </div>
    </div>
    <div>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
        >
          <button
            onClick={[Function]}
          >
            Read an explanation of the answer
          </button>
        </div>
        <div />
      </div>
    </div>
  </fieldset>
</form>
`;

exports[`MCAssessment MCAssessment component with one response in practice mode 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-practice is-not-correct is-not-showing-explanation is-not-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  tabIndex={-1}
>
  <fieldset>
    <legend
      className="instructions"
    >
      <span
        className="for-screen-reader-only"
      >
        Multiple choice form with 0 choices. 
      </span>
      <span>
        Pick the correct answer
      </span>
    </legend>
    <div
      role="radiogroup"
    >
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      />
    </div>
    <div
      className="submit-and-result-container"
    >
      <div
        className="submit"
      >
        <div
          className="obojobo-draft--components--button is-not-dangerous align-center"
        >
          <button>
            Check Your Answer
          </button>
        </div>
      </div>
    </div>
    <div />
  </fieldset>
</form>
`;

exports[`MCAssessment MCAssessment component with sortedIds 1`] = `
<form
  className="component obojobo-draft--chunks--mc-assessment is-response-type-pick-one is-mode-assessment is-not-correct is-not-showing-explanation is-scored"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.MCAssessment"
  id="obo-id"
  onChange={[Function]}
  onSubmit={[Function]}
  tabIndex={-1}
>
  <fieldset>
    <legend
      className="instructions"
    >
      <span
        className="for-screen-reader-only"
      >
        Multiple choice form with 0 choices. 
      </span>
      <span>
        Pick the correct answer
      </span>
    </legend>
    <div
      role="radiogroup"
    >
      <div
        className="for-screen-reader-only"
        tabIndex="-1"
      >
        <div
          className="result-container"
        >
          <p
            className="result incorrect"
          >
            Incorrect - You received a undefined% on this question.
          </p>
        </div>
      </div>
    </div>
    <div>
      <div
        className="solution"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center show-explanation-button"
        >
          <button
            onClick={[Function]}
          >
            Read an explanation of the answer
          </button>
        </div>
        <div />
      </div>
    </div>
  </fieldset>
</form>
`;

exports[`MCAssessment getInstructions builds as expected for pick-all 1`] = `
<span>
  Pick 
  <b>
    all
  </b>
   of the correct answers
</span>
`;

exports[`MCAssessment getInstructions builds as expected for pick-one 1`] = `
<span>
  Pick the correct answer
</span>
`;

exports[`MCAssessment getInstructions builds as expected for pick-one-multiple-correct 1`] = `
<span>
  Pick one of the correct answers
</span>
`;
